--- a/notebook_idata_lesson01/test/test.ipynb
+++ b/notebook_idata_lesson01/test/test.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -196,172 +194,28 @@
        "</div>"
       ],
       "text/plain": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
+       "   age          job  marital          education  default housing loan  \\\n",
+       "0   44  blue-collar  married           basic.4y  unknown     yes   no   \n",
+       "1   53   technician  married            unknown       no      no   no   \n",
+       "2   28   management   single  university.degree       no     yes   no   \n",
+       "3   39     services  married        high.school       no      no   no   \n",
+       "4   55      retired  married           basic.4y       no     yes   no   \n",
        "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
+       "    contact month day_of_week ...  campaign  pdays  previous     poutcome  \\\n",
+       "0  cellular   aug         thu ...         1    999         0  nonexistent   \n",
+       "1  cellular   nov         fri ...         1    999         0  nonexistent   \n",
+       "2  cellular   jun         thu ...         3      6         2      success   \n",
+       "3  cellular   apr         fri ...         2    999         0  nonexistent   \n",
+       "4  cellular   aug         fri ...         1      3         1      success   \n",
        "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>job</th>\n",
-       "      <th>marital</th>\n",
-       "      <th>education</th>\n",
-       "      <th>default</th>\n",
-       "      <th>housing</th>\n",
-       "      <th>loan</th>\n",
-       "      <th>contact</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day_of_week</th>\n",
-       "      <th>...</th>\n",
-       "      <th>campaign</th>\n",
-       "      <th>pdays</th>\n",
-       "      <th>previous</th>\n",
-       "      <th>poutcome</th>\n",
-       "      <th>emp_var_rate</th>\n",
-       "      <th>cons_price_idx</th>\n",
-       "      <th>cons_conf_idx</th>\n",
-       "      <th>euribor3m</th>\n",
-       "      <th>nr_employed</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>44</td>\n",
-       "      <td>blue-collar</td>\n",
-       "      <td>married</td>\n",
-       "      <td>basic.4y</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>cellular</td>\n",
-       "      <td>aug</td>\n",
-       "      <td>thu</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>999</td>\n",
-       "      <td>0</td>\n",
-       "      <td>nonexistent</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>93.444</td>\n",
-       "      <td>-36.1</td>\n",
-       "      <td>4.963</td>\n",
-       "      <td>5228.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>53</td>\n",
-       "      <td>technician</td>\n",
-       "      <td>married</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>cellular</td>\n",
-       "      <td>nov</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>999</td>\n",
-       "      <td>0</td>\n",
-       "      <td>nonexistent</td>\n",
-       "      <td>-0.1</td>\n",
-       "      <td>93.200</td>\n",
-       "      <td>-42.0</td>\n",
-       "      <td>4.021</td>\n",
-       "      <td>5195.8</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>28</td>\n",
-       "      <td>management</td>\n",
-       "      <td>single</td>\n",
-       "      <td>university.degree</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>cellular</td>\n",
-       "      <td>jun</td>\n",
-       "      <td>thu</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>success</td>\n",
-       "      <td>-1.7</td>\n",
-       "      <td>94.055</td>\n",
-       "      <td>-39.8</td>\n",
-       "      <td>0.729</td>\n",
-       "      <td>4991.6</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>39</td>\n",
-       "      <td>services</td>\n",
-       "      <td>married</td>\n",
-       "      <td>high.school</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>cellular</td>\n",
-       "      <td>apr</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>999</td>\n",
-       "      <td>0</td>\n",
-       "      <td>nonexistent</td>\n",
-       "      <td>-1.8</td>\n",
-       "      <td>93.075</td>\n",
-       "      <td>-47.1</td>\n",
-       "      <td>1.405</td>\n",
-       "      <td>5099.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>55</td>\n",
-       "      <td>retired</td>\n",
-       "      <td>married</td>\n",
-       "      <td>basic.4y</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>cellular</td>\n",
-       "      <td>aug</td>\n",
-       "      <td>fri</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>success</td>\n",
-       "      <td>-2.9</td>\n",
-       "      <td>92.201</td>\n",
-       "      <td>-31.4</td>\n",
-       "      <td>0.869</td>\n",
-       "      <td>5076.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
+       "  emp_var_rate  cons_price_idx  cons_conf_idx  euribor3m  nr_employed  y  \n",
+       "0          1.4          93.444          -36.1      4.963       5228.1  0  \n",
+       "1         -0.1          93.200          -42.0      4.021       5195.8  0  \n",
+       "2         -1.7          94.055          -39.8      0.729       4991.6  1  \n",
+       "3         -1.8          93.075          -47.1      1.405       5099.1  0  \n",
+       "4         -2.9          92.201          -31.4      0.869       5076.2  1  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
      "execution_count": 3,
@@ -386,7 +240,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 41188 entries, 0 to 41187\nData columns (total 21 columns):\nage               41188 non-null int64\njob               41188 non-null object\nmarital           41188 non-null object\neducation         41188 non-null object\ndefault           41188 non-null object\nhousing           41188 non-null object\nloan              41188 non-null object\ncontact           41188 non-null object\nmonth             41188 non-null object\nday_of_week       41188 non-null object\nduration          41188 non-null int64\ncampaign          41188 non-null int64\npdays             41188 non-null int64\nprevious          41188 non-null int64\npoutcome          41188 non-null object\nemp_var_rate      41188 non-null float64\ncons_price_idx    41188 non-null float64\ncons_conf_idx     41188 non-null float64\neuribor3m         41188 non-null float64\nnr_employed       41188 non-null float64\ny                 41188 non-null int64\ndtypes: float64(5), int64(6), object(10)\nmemory usage: 6.6+ MB\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 41188 entries, 0 to 41187\n",
+      "Data columns (total 21 columns):\n",
+      "age               41188 non-null int64\n",
+      "job               41188 non-null object\n",
+      "marital           41188 non-null object\n",
+      "education         41188 non-null object\n",
+      "default           41188 non-null object\n",
+      "housing           41188 non-null object\n",
+      "loan              41188 non-null object\n",
+      "contact           41188 non-null object\n",
+      "month             41188 non-null object\n",
+      "day_of_week       41188 non-null object\n",
+      "duration          41188 non-null int64\n",
+      "campaign          41188 non-null int64\n",
+      "pdays             41188 non-null int64\n",
+      "previous          41188 non-null int64\n",
+      "poutcome          41188 non-null object\n",
+      "emp_var_rate      41188 non-null float64\n",
+      "cons_price_idx    41188 non-null float64\n",
+      "cons_conf_idx     41188 non-null float64\n",
+      "euribor3m         41188 non-null float64\n",
+      "nr_employed       41188 non-null float64\n",
+      "y                 41188 non-null int64\n",
+      "dtypes: float64(5), int64(6), object(10)\n",
+      "memory usage: 6.6+ MB\n"
      ]
     }
    ],
@@ -558,159 +437,31 @@
        "</div>"
       ],
       "text/plain": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
+       "                  count         mean         std       min       25%  \\\n",
+       "age             41188.0    40.024060   10.421250    17.000    32.000   \n",
+       "duration        41188.0   258.285010  259.279249     0.000   102.000   \n",
+       "campaign        41188.0     2.567593    2.770014     1.000     1.000   \n",
+       "pdays           41188.0   962.475454  186.910907     0.000   999.000   \n",
+       "previous        41188.0     0.172963    0.494901     0.000     0.000   \n",
+       "emp_var_rate    41188.0     0.081886    1.570960    -3.400    -1.800   \n",
+       "cons_price_idx  41188.0    93.575664    0.578840    92.201    93.075   \n",
+       "cons_conf_idx   41188.0   -40.502600    4.628198   -50.800   -42.700   \n",
+       "euribor3m       41188.0     3.621291    1.734447     0.634     1.344   \n",
+       "nr_employed     41188.0  5167.035911   72.251528  4963.600  5099.100   \n",
+       "y               41188.0     0.112654    0.316173     0.000     0.000   \n",
        "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>age</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>40.024060</td>\n",
-       "      <td>10.421250</td>\n",
-       "      <td>17.000</td>\n",
-       "      <td>32.000</td>\n",
-       "      <td>38.000</td>\n",
-       "      <td>47.000</td>\n",
-       "      <td>98.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>duration</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>258.285010</td>\n",
-       "      <td>259.279249</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>102.000</td>\n",
-       "      <td>180.000</td>\n",
-       "      <td>319.000</td>\n",
-       "      <td>4918.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>campaign</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>2.567593</td>\n",
-       "      <td>2.770014</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>2.000</td>\n",
-       "      <td>3.000</td>\n",
-       "      <td>56.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pdays</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>962.475454</td>\n",
-       "      <td>186.910907</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>999.000</td>\n",
-       "      <td>999.000</td>\n",
-       "      <td>999.000</td>\n",
-       "      <td>999.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>previous</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>0.172963</td>\n",
-       "      <td>0.494901</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>7.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>emp_var_rate</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>0.081886</td>\n",
-       "      <td>1.570960</td>\n",
-       "      <td>-3.400</td>\n",
-       "      <td>-1.800</td>\n",
-       "      <td>1.100</td>\n",
-       "      <td>1.400</td>\n",
-       "      <td>1.400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cons_price_idx</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>93.575664</td>\n",
-       "      <td>0.578840</td>\n",
-       "      <td>92.201</td>\n",
-       "      <td>93.075</td>\n",
-       "      <td>93.749</td>\n",
-       "      <td>93.994</td>\n",
-       "      <td>94.767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cons_conf_idx</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>-40.502600</td>\n",
-       "      <td>4.628198</td>\n",
-       "      <td>-50.800</td>\n",
-       "      <td>-42.700</td>\n",
-       "      <td>-41.800</td>\n",
-       "      <td>-36.400</td>\n",
-       "      <td>-26.900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>euribor3m</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>3.621291</td>\n",
-       "      <td>1.734447</td>\n",
-       "      <td>0.634</td>\n",
-       "      <td>1.344</td>\n",
-       "      <td>4.857</td>\n",
-       "      <td>4.961</td>\n",
-       "      <td>5.045</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nr_employed</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>5167.035911</td>\n",
-       "      <td>72.251528</td>\n",
-       "      <td>4963.600</td>\n",
-       "      <td>5099.100</td>\n",
-       "      <td>5191.000</td>\n",
-       "      <td>5228.100</td>\n",
-       "      <td>5228.100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y</th>\n",
-       "      <td>41188.0</td>\n",
-       "      <td>0.112654</td>\n",
-       "      <td>0.316173</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1.000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "                     50%       75%       max  \n",
+       "age               38.000    47.000    98.000  \n",
+       "duration         180.000   319.000  4918.000  \n",
+       "campaign           2.000     3.000    56.000  \n",
+       "pdays            999.000   999.000   999.000  \n",
+       "previous           0.000     0.000     7.000  \n",
+       "emp_var_rate       1.100     1.400     1.400  \n",
+       "cons_price_idx    93.749    93.994    94.767  \n",
+       "cons_conf_idx    -41.800   -36.400   -26.900  \n",
+       "euribor3m          4.857     4.961     5.045  \n",
+       "nr_employed     5191.000  5228.100  5228.100  \n",
+       "y                  0.000     0.000     1.000  "
       ]
      },
      "execution_count": 5,
@@ -725,33 +476,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['age',\n",
+       " 'job',\n",
+       " 'marital',\n",
+       " 'education',\n",
+       " 'default',\n",
+       " 'housing',\n",
+       " 'loan',\n",
+       " 'contact',\n",
+       " 'month',\n",
+       " 'day_of_week',\n",
+       " 'duration',\n",
+       " 'campaign',\n",
+       " 'pdays',\n",
+       " 'previous',\n",
+       " 'poutcome',\n",
+       " 'emp_var_rate',\n",
+       " 'cons_price_idx',\n",
+       " 'cons_conf_idx',\n",
+       " 'euribor3m',\n",
+       " 'nr_employed',\n",
+       " 'y']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 查看所有的列名\n",
+    "df.columns.get_values().tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "特征的含义\n",
+    "\n",
+    "|column_name|含义|\n",
+    "|---|---|\n",
+    "|age|年龄|\n",
+    "|job|职业|\n",
+    "|marital|婚姻状况|\n",
+    "|education|教育程度|\n",
+    "|default|是否有违约记录|\n",
+    "|housing|是否有房贷记录|\n",
+    "|loan|是否有个人贷款|\n",
+    "|contact|联络方式|\n",
+    "|month|最近一次联系的月份|\n",
+    "|day_of_week|最近一次练习的日期|\n",
+    "|duration|通话持续时间|\n",
+    "|campaign||\n",
+    "|pdays||\n",
+    "|previous||\n",
+    "|poutcome||\n",
+    "|emp_var_rate||\n",
+    "|cons_price_idx||\n",
+    "|cons_conf_idx||\n",
+    "|euribor3m||\n",
+    "|nr_employed||\n",
+    "|y||\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 查看所有的列名\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
